--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
     </head>
 
     <body>
-        <header>
+        <h1>My Insta-Sohor</h1>
+        <header >
             <nav class="navbar navbar-expand-lg navbar-light bg-light px-5">
                 <a class="navbar-brand" href="#">Insta-Sohor</a>
                 <button
